--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nova+Flat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@100&display=swap');
 * {
- font-family: myriad-pro, Lucida Grande, Arial, 'Kantumruy', 'Siemreap',
-  sans-serif;
+ font-family: 'Encode Sans SC', sans-serif;
 }
 
 body {
- /* font-family: 'Bayon', cursive; */
- font-family: myriad-pro, Lucida Grande, Arial, 'Kantumruy', 'Siemreap',
-  sans-serif;
+ font-family: 'Encode Sans SC', sans-serif;
  background: rgb(44, 49, 54) !important;
  overflow-y: scroll;
 }
@@ -23,7 +18,6 @@ body {
 }
 
 .khFont {
- /* font-family: 'Bayon', cursive; */
  font-family: myriad-pro, Lucida Grande, Arial, 'Kantumruy', 'Siemreap',
   sans-serif;
 }
