--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,7 @@ body {
  display: inline-block;
  text-align: center;
  border-radius: 5px;
- /* color: #fff; */
+ background: rgb(44, 49, 54);
  font-size: 220px;
  line-height: 250px;
  vertical-align: middle;
@@ -26,7 +26,7 @@ body {
 }
 
 .instagram:hover {
- background: rgb(255, 255, 255) !important;
+ background: rgb(107, 107, 107) !important;
 }
 
 .ubuntu {
@@ -38,7 +38,7 @@ body {
 }
 
 .testColor {
- color: rgba(0, 0, 0, 0.404);
+ color: rgb(62, 69, 75);
 }
 
 .playIcon:hover {
