--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -205,3 +205,9 @@ body {
   top: -140px;
  }
 }
+
+.page-item.active .page-link {
+ background-color: rgb(255, 193, 7) !important;
+ border-color: rgb(255, 193, 7) !important;
+ color: black !important;
+}
